--- a/prediction_plot.ipynb
+++ b/prediction_plot.ipynb
@@ -70,7 +70,7 @@
     "            sub,\n",
     "            bins=40,\n",
     "            alpha=0.4,\n",
-    "            density=True,           # 纵轴做成“概率密度”，大致当百分比用\n",
+    "            density=True,           # The vertical axis is labeled \"probability density,\" which can be roughly interpreted as a percentage.\n",
     "            label=model,\n",
     "        )\n",
     "    ax.set_title(f\"True label = {label}\")\n",
